--- a/src/app/components/pages/user/dashboard/dashboard.component.scss
+++ b/src/app/components/pages/user/dashboard/dashboard.component.scss
@@ -3,8 +3,8 @@
 
     padding: 40px 30px;
 
-    min-height: 100vh;
-    height: 100%;
+    min-height: 50vh;
+    height: fit-content;
     width: 100%;
 }
 
