--- a/src/app/components/pages/user/profile/password/password.component.html
+++ b/src/app/components/pages/user/profile/password/password.component.html
@@ -9,7 +9,7 @@
       </div> 
       <span class="text-0">Current Password</span>
       <div class="p-col-6 fi-col">
-        <input type="password" pInputText />
+        <input type="password" pInputText [(ngModel)]="currentPw" />
       </div>
       <hr>
       <div class="sub-title">
@@ -19,16 +19,16 @@
       <hr>
       <span class="text-0">New Password</span>
       <div class="p-col-6 fi-col">
-        <input type="password" pInputText />
+        <input type="password" pInputText [(ngModel)]="newPW" />
       </div>
       <hr>
       <span class="text-0">Repeat Password</span>
       <div class="p-col-6 fi-col">
-        <input type="password" pInputText />
+        <input type="password" pInputText [(ngModel)]="conPW" />
       </div>
 
       <div class="p-col-12" style="text-align: center;">
-        <button pButton type="button" label="Change Password" class="ui-button-raised ui-button-warning"></button>
+        <button pButton type="button" label="Change Password" class="ui-button-raised ui-button-warning" (click)="updatePw()"></button>
       </div>
     </div>
     <div class="p-col-2 changepass">
