--- a/src/app/components/pages/admin/members/members.component.scss
+++ b/src/app/components/pages/admin/members/members.component.scss
@@ -244,6 +244,8 @@
                     color: white;
                     font-weight: bold;
 
+                    text-transform: uppercase;
+
                     border-radius: 5px;
                }
 
